<resources>
    <string name="app_name">Audiophile</string>
    <string name="splashscreen">HeadPhones</string>
    <string name="label_registration">Регистрация</string>
    <string name="label_authorization">Авторизация</string>
    <string name="hint_input_name">Имя</string>
    <string name="hint_input_email">E-mail</string>
    <string name="hint_input_pass">Пароль</string>
    <string name="text_reg_button">Регистрация</string>
    <string name="text_auth_button">Вход</string>
    <string name="have_acc">Уже есть аккаунт? Вход</string>
    <string name="username">Имя</string>
    <string name="secondname">Фамилия</string>
    <string name="Profile">Профиль</string>
    <string name="Phone">+7 800 555 35 35</string>
    <string name="Enter">Применить</string>
    <string name="error">Возникла ошибка!!!</string>
    <string name="error_connect">Ошибка соединения :D</string>

</resources>