<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/appImage"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_margin="50dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/app_image"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/authorization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="36dp"
        android:layout_margin="16dp"
        android:text="@string/label_authorization"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@color/white"
        android:inputType="textEmailAddress"
        android:text="@string/hint_input_email"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@color/white"
        android:inputType="textPassword"
        android:text="@string/hint_input_pass"/>

    <Button
        android:id="@+id/buttonAuthorization"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/black"
        android:layout_margin="16dp"
        android:text="@string/text_auth_button"/>

</LinearLayout>
